# heidi-cli

./: .env  .env.example  .firebaserc  .gitignore  .memory  Dockerfile  INSTALL.md  Plan.agent.md  QUICK_INSTALL.md  QUICK_START.md  README.md  Self-Healer-UI.agent.md  client.py  conservative-bugfix.agent.md  context-memories.agent.md  deployment-governor.agent.md  dev-new-setup-wizard-todo.md  docker-architecture.agent.md  fix_heidid.sh  fix_ruff_autofix.sh  fix_toml.sh  high-autonomy.agent.md  install  install.ps1  install.sh  llm-config.yaml  llm-conversion.agent.md  output.json  performance-profiling.agent.md  progress-monitor.agent.md  pyproject.toml  release-orchestrator.agent.md  reproduce_blocking.py  reviewer-audit.agent.md  schema-migration.agent.agent.md  sdk.py  self-auditing.agent.md  test_implementation.py  test_smoke.py  test_streaming.py  (+3 more)
.Jules/: palette.md
.jules/: bolt.md
docs/: DOCKER_HEIDI_CLI.md  FINAL_PR_DESCRIPTION.md  (+23 more)
heidi_cli/: README.md  pyproject.toml
heidi_cli/src/heidi_cli/: auth_db.py  auth_device.py  auth_encryption.py  auth_middleware.py  auth_oauth.py  backup.py  cli.py  config.py  connect.py  context.py  copilot_runtime.py  launcher.py  logging.py  openwebui_commands.py  personas.py  server.py  setup_wizard.py  streaming.py  token_usage.py  tunnel.py
heidi_cli/src/heidi_cli/connect/: __init__.py
heidi_cli/src/heidi_cli/orchestrator/: artifacts.py  executors.py  loop.py  plan.py  planner.py  registry.py  session.py  workspace.py
heidi_cli/tests/: conftest.py  test_auth.py  test_auth_encryption.py  test_cli_open_url.py  test_client.py  test_client_pipe.py  test_config.py  test_context.py  test_heidi.py  test_plan_routing.py  test_server_auth.py  test_server_routes.py  test_server_runs.py  test_server_security.py
(+352 files in other folders)
