[project]
name = "heidi-cli"
version = "0.1.0"
description = "Heidi CLI - orchestrate Copilot SDK + Jules + OpenCode agent loops"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
  "github-copilot-sdk>=0.1.23",
  "keyring>=24.0.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "httpx>=0.26.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
]

[project.scripts]
heidi = "heidi_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
